--- a/about.html
+++ b/about.html
@@ -52,9 +52,9 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+                        <p>This is my third semester in Temple's Master of Public Policy program, and my first time taking a GIS course. </p>
+                        <p>I decided to take this course because I am interested in environmental sustainability in urban environments and city planning with an environmentally-conscious lens, and think experience with GIS will be beneficial for this purpose.</p>
+                        <p>I enjoyed creating these maps and learning how to effectively use an array of tools within ArcGIS Pro to solve problems with policy implications.  </p>
                     </div>
                 </div>
             </div>
