--- a/post.html
+++ b/post.html
@@ -28,7 +28,7 @@
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="about.html">About</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="post.html">Sample Post</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="post.html">My Maps</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a></li>
                     </ul>
                 </div>
@@ -65,35 +65,8 @@
                         <h2 class="section-heading">Map 2</h2>
                         <p>The problem we were trying to solve in this lab and in creating this map was how to make choropleth and proportional symbol maps using Census data at a national scale. Specifically, this lab aimed to answer the questions: Where does Census data come from? How is it collected? What projection do you use when mapping the continental US? What are the limitations of Census data? How do you choose the proper map type for your data and audience?</p>
                         <p> This map is a choropleth of the percentage of the Hispanic population by state in the contiguous US states.The skills I learned in this lab include how to use map layout, symbology, elements, placements, and data field identification and use for the purpose of proportional symbol and choropleth maps.To solve this lab’s problem and create this map I first used select by attribute to select only the contiguous US states and created a new shapefile of these states. To make the choropleth of the percentage of the Hispanic population by state, I navigated to the symbology pane, changed the symbology type to graduated colors, and selected the Hispanic population variable as the field. Then under normalization, I selected the total population variable, and selected quantile as the method. I then adjusted the color scheme and histogram break lines, and created a new layout and added this map to it. Lastly, I added the relevant title and graphic elements, and used the share tab to export my maps as a PNG file.  </p>
-                        <blockquote class="blockquote">The dreams of yesterday are the hopes of today and the reality of tomorrow. Science has not yet mastered prophecy. We predict too much for the next year and yet far too little for the next ten.</blockquote>
-                        <p>The 5 states with the lowest Hispanic population and the Hispanic population of each are:
-Vermont - 31,952
-Wyoming - 40,203
-North Dakota - 44,595
-Delaware - 55,886
-Rhode Island - 57,448
-
-
-The 5 states with the highest Hispanic population and the Hispanic population of each are:
-California - 2, 531,333
-Texas - 1,928,473
-New York - 1,155,822
-Florida - 1,073,506
-Illinois - 835,577
-
-States where the Hispanic population is greater than the population of the least populous state (Wyoming) are:
-Illinois
-Michigan
-California
-Texas
-Florida
-New York
-Ohio
-Pennsylvania
-Indiana
-North Carolina
-Georgia
-</p>
+                        <blockquote class="blockquote">The dreams of yesterday are the hopes of today and the reality of tomorrow. Science has not yet mastered prophecy. We predict too much for the next year and yet far too little for the next ten. 
+                        </blockquote>
                         <h2 class="section-heading">Map 3</h2>
                         <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile, so delicate, that if you touched it with a finger it would crumble and fall apart. Seeing this has to change a man.</p>
                         <a href="#!"><img class="img-fluid" src="assets/img/post-sample-image.jpg" alt="..." /></a>
