--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <p>This is my third semester in Temple's Master of Public Policy program, and my first time taking a GIS course. </p>
                         <p>I decided to take this course because I am interested in environmental sustainability in urban environments and city planning with an environmentally-conscious lens, and think experience with GIS will be beneficial for this purpose.</p>
-                        <p>I enjoyed creating these maps and learning how to effectively use an array of tools within ArcGIS Pro to solve problems with policy implications.  </p>
+                        <p>This course brought new challenges and opportunities to master key skills each week. While some weeks were more difficult than others, I enjoyed the process of creating these maps and learning how to effectively use an array of tools within ArcGIS Pro to solve problems with policy implications.</p>
                     </div>
                 </div>
             </div>
